--- a/index.html
+++ b/index.html
@@ -8,11 +8,37 @@
 
 <body>
     <header>
-        <h1>Discover hidden places in the world around you</h1>
+        <h1 class="pagetitle">Discover hidden places in the world around you</h1>
         <a href="">Download Excursion (coming soon !)</a>
 
 
     </header>
+    <main>
+        <section>
+            <video src="resources/videos/excursion.mp4" autoplay muted loop>this video is not supported on your browser</video>
+            <h1>Your personal travel guide</h1>
+
+        </section>
+        
+        <section>
+          <p>Excursions remembers places you like, and recommends new points of interest around you.</p>
+          <img src="resources/images/camp.webp"/>
+
+
+        </section>
+        <section>
+            <img class="phone" src="resources/images/phone.webp"/>
+            <h1>Coming Soon for iPhone and Android</h1>
+            <a href="">Download Excursion (coming soon !)</a>
+            <p class="right">©Excursion</p>
+
+
+        </section>
+
+
+
+
+    </main>
 
 
 </body>
